<resources>
    <string name="app_name">Led Cube</string>

    <string name="contentDescription">contentDescription</string>

    <string name="pair_device">Pair to Led Cube</string>
    <string name="pairing_device">Pairing...</string>
    <string name="check_connection">Check connection</string>
    <string name="last_scan">Last scan:</string>

    <string name="menu_home">Home</string>
    <string name="menu_search">Search</string>
    <string name="menu_settings">Settings</string>

    <string name="header_search">Search</string>
    <string name="header_settings">Settings</string>

    <string name="setting_edit_profile">Edit Profile</string>
    <string name="setting_auto_detect">Automatically detect device</string>
    <string name="setting_sync_brightness">Synchronize the brightness of the effects</string>
    <string name="setting_restore_default_settings">Restore default settings</string>

    <string name="demo_last_scan">Last scan: 08:00 01/01/2020</string>
    <string name="demo_IP">192.168.1.1</string>
    <string name="demo_MAC">00:11:22:33:44:55:66</string>
    <string name="demo_ping">1000</string>
    <string name="demo_battery_level">50%</string>

    <string name="sample_username">Viet Kynl</string>
    <string name="sample_email">vietkynl@gmail.com</string>

    <string name="connecting">Connecting…</string>
    <string name="online">Online</string>
    <string name="offline">Offline</string>
    <string name="no_device">No device</string>

    <string name="unit_ms">ms</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>