<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_page_shape"
    android:orientation="vertical"
    android:paddingStart="10dp"
    android:paddingEnd="10dp"
    tools:context=".fragment.SearchFragment">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">

        <ImageButton
            android:id="@+id/searchBackBtn"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_gravity="center"
            android:background="@drawable/transparent_rectangle"
            android:contentDescription="@string/contentDescription"
            android:padding="15dp"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/back_50" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_weight="1"
            android:text="@string/header_search"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <ImageButton
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_gravity="center"
            android:background="@drawable/transparent_rectangle"
            android:contentDescription="@string/contentDescription"
            android:padding="10dp"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/ellipsis_50" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="0dp"
        android:layout_marginBottom="0dp">

        <TextView
            android:id="@+id/informationText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="0dp"
            android:layout_marginEnd="15dp"
            android:layout_weight="1"
            android:text="@string/demo_last_scan"
            android:textColor="@color/white" />

        <FrameLayout
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_gravity="center"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp">

            <ProgressBar
                android:id="@+id/circleProgressBar"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:indeterminateTint="@color/white"
                android:padding="10dp"
                android:progressTint="@color/white"
                android:visibility="invisible" />

            <ImageButton
                android:id="@+id/refreshBtn"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/transparent_rectangle"
                android:contentDescription="@string/contentDescription"
                android:padding="9dp"
                android:scaleType="fitCenter"
                android:visibility="visible"
                app:srcCompat="@drawable/refresh_48" />
        </FrameLayout>

    </LinearLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:progressBackgroundTint="@color/backgroundDark" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/deviceListRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        tools:itemCount="7"
        tools:listitem="@layout/recycler_view_item" />

</LinearLayout>